# xplayer-plparser

./: COPYING.LIB  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  meson.build  totem-pl-parser.spec  totem-pl-parser.spec.in  totem-plparser-mini-uninstalled.pc.in  totem-plparser-mini.pc  xplayer-pl-parser.doap  xplayer-plparser-mini.pc  xplayer-plparser-mini.pc.in  xplayer-plparser-uninstalled.pc.in  xplayer-plparser.pc.in
debian/: changelog  control  control.in  copyright  libtotem-plparser18.symbols  libxplayer-plparser-dev.install  libxplayer-plparser18.symbols  rules  watch
debian/patches/: ppc64el.diff  series
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in  meson.build  totem-pl-parser.types  version.xml.in  xplayer-pl-parser-docs.xml  xplayer-pl-parser-sections.txt
docs/reference/html/: TotemPlParser.html  TotemPlPlaylist.html  XplayerPlParser.html  annotation-glossary.html  api-index-deprecated.html  api-index-full.html  api-reference.html  index.html  index.sgml  ix02.html  totem-pl-parser-TotemPlPlaylistIter.html  totem-pl-parser.devhelp2  xplayer-pl-parser.devhelp2
lib/: Makefile.am  Makefile.in  asprintf.c  meson.build  totem_internal.h
m4/: libtool.m4
plparse/: Makefile.am  Makefile.in  meson.build  plparser-mini.map  plparser-mini.symbols  plparser.map  plparser.symbols  totem-disc.c  totem-disc.h  totem-pl-parser-amz.c  totem-pl-parser-amz.h  totem-pl-parser-features.h  totem-pl-parser-lines.c  totem-pl-parser-lines.h  totem-pl-parser-media.h  totem-pl-parser-mini.h  totem-pl-parser-pla.c  totem-pl-parser-pls.c  totem-pl-parser-pls.h  totem-pl-parser-podcast.c  totem-pl-parser-private.h  totem-pl-parser-qt.c  totem-pl-parser-smil.h  totem-pl-parser-videosite.h  totem-pl-parser-wm.c  totem-pl-parser-wm.h  totem-pl-parser-xspf.c  totem-pl-parser-xspf.h  totem-pl-parser.c  totem-pl-playlist.c  totem-pl-playlist.h  videosite-parser.c  xmlparser.c  xplayer-pl-parser-builtins.c.template  xplayer-pl-parser-builtins.h.template  xplayer-pl-parser-features.h.in  xplayer-pl-parser-media.c  xplayer-pl-parser-misc.c  xplayer-pl-parser-misc.h  xplayer-pl-parser-pla.h  (+7 more)
plparse/tests/: Makefile.am  Makefile.in  disc.c  meson.build  parser.c
po/: POTFILES.in  af.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+54 more)
